--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./server/index.js", 
     "dev": "nodemon ./server/index.js"
   },
   "author": "Dezz",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    
     "express": "4.18.2",
     "mongodb": "6.1.0",
     "morgan": "1.10.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "eslint": "8.51.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "dotenv": "16.3.1"
   }
 }
