--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "eslint": "8.51.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "3.0.1",
     "dotenv": "16.3.1"
   }
 }
